--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>MINESWEEPER</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>SWEEP MINES????</h1>
 		</header>
 			<section id="content">
 				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    By Daniel Baran Block 1; right click to flag, left click to uncover.
 	    </footer>
 	</body>
 </html>
